@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2015, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -26,7 +26,6 @@
 package jdk.javadoc.internal.doclets.toolkit.util;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -76,12 +75,7 @@ import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
 import static com.sun.source.doctree.DocTree.Kind.*;
 
 /**
- *  A utility class.
- *
- *  <p><b>This is NOT part of any supported API.
- *  If you write code that depends on this, you do so at your own risk.
- *  This code and its internal interfaces are subject to change or
- *  deletion without notice.</b>
+ * A utility class.
  */
 public class CommentHelper {
     private final BaseConfiguration configuration;
@@ -340,8 +334,12 @@ public class CommentHelper {
     }
 
     public TypeElement getReferencedClass(DocTree dtree) {
-        Utils utils = configuration.utils;
         Element e = getReferencedElement(dtree);
+        return getReferencedClass(e);
+    }
+
+    public TypeElement getReferencedClass(Element e) {
+        Utils utils = configuration.utils;
         if (e == null) {
             return null;
         } else if (utils.isTypeElement(e)) {
@@ -354,16 +352,24 @@ public class CommentHelper {
 
     public String getReferencedModuleName(DocTree dtree) {
         String s = getReferencedSignature(dtree);
-        if (s == null || s.contains("#") || s.contains("(")) {
+        return getReferencedModuleName(s);
+    }
+
+    public String getReferencedModuleName(String signature) {
+        if (signature == null || signature.contains("#") || signature.contains("(")) {
             return null;
         }
-        int n = s.indexOf("/");
-        return (n == -1) ? s : s.substring(0, n);
+        int n = signature.indexOf("/");
+        return (n == -1) ? signature : signature.substring(0, n);
     }
 
     public Element getReferencedMember(DocTree dtree) {
-        Utils utils = configuration.utils;
         Element e = getReferencedElement(dtree);
+        return getReferencedMember(e);
+    }
+
+    public Element getReferencedMember(Element e) {
+        Utils utils = configuration.utils;
         if (e == null) {
             return null;
         }
@@ -372,15 +378,23 @@ public class CommentHelper {
 
     public String getReferencedMemberName(DocTree dtree) {
         String s = getReferencedSignature(dtree);
-        if (s == null) {
+        return getReferencedMemberName(s);
+    }
+
+    public String getReferencedMemberName(String signature) {
+        if (signature == null) {
             return null;
         }
-        int n = s.indexOf("#");
-        return (n == -1) ? null : s.substring(n + 1);
+        int n = signature.indexOf("#");
+        return (n == -1) ? null : signature.substring(n + 1);
     }
 
     public PackageElement getReferencedPackage(DocTree dtree) {
         Element e = getReferencedElement(dtree);
+        return getReferencedPackage(e);
+    }
+
+    public PackageElement getReferencedPackage(Element e) {
         if (e != null) {
             Utils utils = configuration.utils;
             return utils.containingPackage(e);
@@ -390,12 +404,15 @@ public class CommentHelper {
 
     public ModuleElement getReferencedModule(DocTree dtree) {
         Element e = getReferencedElement(dtree);
+        return getReferencedModule(e);
+    }
+
+    public ModuleElement getReferencedModule(Element e) {
         if (e != null && configuration.utils.isModule(e)) {
             return (ModuleElement) e;
         }
         return null;
     }
-
 
     public List<? extends DocTree> getFirstSentenceTrees(List<? extends DocTree> body) {
         return configuration.docEnv.getDocTrees().getFirstSentence(body);
@@ -654,7 +671,7 @@ public class CommentHelper {
 
             @Override
             protected List<? extends DocTree> defaultAction(DocTree node, Void p) {
-               return Collections.emptyList();
+               return List.of();
             }
         }.visit(dtree, null);
     }
